--- a/stryle.css
+++ b/stryle.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 :root{
@@ -19,5 +20,41 @@ body{
 }
 
 .header-mobile{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+}
 
+.header-mobile button{
+    border:none;
+    background: none;
+}
+
+.primeira-secao{
+    margin-bottom: 4rem;
+}
+
+.primeira-secao img{
+    font-size: 2.5rem;
+    width: 100%;
+}
+
+.primeira-secao h1{
+    font-size: 2.5;
+    line-height: 100%;
+    color: var(--dark-bluse);
+    margin-botton: 1.625rem;
+}
+
+.primeira-secao button{
+    padding: 0.75rem 2rem;
+    background-color: var(--vermillion);
+    border: none;
+    text-transform: uppercase;
+    color: var(--almost-white);
+    font-weight: 700;
+    font-size: 0.875rem;
+    letter-spacing: 0.275rem;
+    line-height: 1.5rem;
 }
